chore: build script changes